# rox-gcp

./: QUESTIONS.md  README.md
ml-sales-model/: .gitignore  README.md  pyproject.toml
ml-sales-model/data/: sales_dataset.csv  sales_forecast_model.pkl
ml-sales-model/experiments/: model.py
ml-sales-model/pipelines/: deploy_model.py  train_model.py
ml-sales-model/terraform/: main.tf  terraform.tfvars
