[tool.poetry]
name = "ml-sales-model"
version = "1.0.0"
description = "Exemplo de um modelo de previsão de demanda de vendas"
authors = ["Ederson Corbari <ecorbari@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.11"
google-cloud-storage = "<3.0.0"
google-cloud-aiplatform = "1.79.0"
pandas = "2.2.3"
scikit-learn = "1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

